# llm-docscout

./: .gitignore  .model_path  CLAUDE.md  DATA_PLAN.md  NARRATIVE_REPORT.md  PAPER_PLAN.md  README.md  RESEARCH_BRIEF.md  pyproject.toml
configs/: env_default.yaml  llm_api.example.yaml  reward_add.yaml  reward_ratio.yaml  reward_redund.yaml
data/: dataset_registry.json
data/personamem/: questions_32k.csv
data/sft/: phase2_2hop.jsonl  phase2_2hop_full.jsonl  v11_musique500.jsonl  v2_demo.jsonl  v4_direct1k.jsonl  v5_top3_demo.jsonl  v7_diverse.jsonl  v8_adaptive.jsonl  v9_musique.jsonl
docscout/: types.py
docscout/agent/: client.py  parsing.py  rollout.py
docscout/llm/: glm.py  (+1 more)
figures/: make_figures.py  make_frontier.py
idea-stage/: IDEA_DRAFT.md  IDEA_REPORT.md  LITERATURE_LANDSCAPE.md  NOVELTY_ASSESSMENT.md  REVIEW.md
paper/: main.tex  main_OLD_positive.tex  references.bib
refine-logs/: DATA_DESIGN.md  EXPERIMENT_PLAN.md  FINAL_PROPOSAL.md  codescout_study.md  round-result.md  自动化实验迭代方案.md
scripts/: diagnostic_closed_book.py  diagnostic_oracle_path.py  diagnostic_snippet_only.py  diagnostic_template_holdout.py  frontier.py  gen_synth_rug_demos.py  gen_synth_top3_demos.py  gen_v4_demos.py  hf_agent_eval.py  llm_smoke.py  make_figures.py  make_progressive_demos.py  parallel_eval.py  run_oracle_eval.py  run_retriever_eval.py  run_rl.py  run_rl_musique.py  run_rl_v3.py  run_rollout.py  run_train.py  stratified.py  v3_diagnostic.py  v3_failure.py  vllm_eval.py  vllm_prompted_eval.py  vllm_rollout_collect.py
tests/: test_core.py  test_corpus_store.py
(+28 files in other folders)
